# well

./: .audit_output.txt  .env.example  .gitignore  .identity_hash  AAA_COCKPIT_SEAL.md  AAA_STACK_MAP_SEAL.md  AGENTS.md  ARIF.md  BOUNDARY.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTEXT.md  DEGRADED_BIOMETRICS_ACCEPT.md  Dockerfile  FEDERATION_CONTRACT.md  FEDERATION_STATUS.md  FOUNDATION.md  GOVERNANCE.md  INVARIANTS.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES_v2026.05.01.md  ROADMAP.md  RUNBOOK.md  SNOOZE_BIOMETRIC.md  SOT-INVENTORY-2026-07-13.md  SOUL.md  STATUS.md  TOMBSTONE.json  TOOL_SURFACE.md  WELL_13_SIGNAL_MAP.json  WELL_888_HOLD_REGISTER.md  WELL_ARIFOS_CONTRACT.md  WELL_COLLAPSE_MANIFEST.json  WELL_EVIDENCE_SOURCES.md  WELL_INVARIANTS.md  WELL_STATE_SCHEMA.json  WELL_TOOL_COUNT_LOG.txt  (+29 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  repo-policy.yml  workflows.CANONICAL.yml
.well-known/: agent-card.json  agent.json
999_vault/: audit.jsonl
GENESIS/: 004_WELL_13_CANON.md  005_WELL_GODEL_LOCK.md  006_WELL_STRANGE_LOOP_GUARD.md  007_WELL_ANTI_CALHOUN_GUARD.md  008_WELL_LANGUAGE_PROTOCOL.md  009_WELL_PHILOSOPHICAL_ANCHORS.md  README.md
adapters/: supabase_adapter.py
contracts/: WELL_MANIFEST.json  __init__.py  enrich_well.py  schema.json
deploy/: well-witness.service
docs/: AGENT_LAYOUT_CONTRACT.md  FEDERATION.md  MEASUREMENT_BOUNDARY_CONTRACT.md  METRIC_CARDS.md  PROTOCOL_CONFORMANCE.md  README.md  RELEASE_NOTES_2026.05.16.md  ROADMAP.md  SCHEMA_MIGRATION.md  TODO.md  VAULT_LEDGER_DIAGNOSIS_2026-07-12.md  WELL_TOOL_SURFACE.md  (+2 more)
(+154 files in other folders)
