[project]
name = "well-mcp"
version = "2026.06.06"
description = "WELL — Human Substrate Governance Layer MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[tasks]==3.4.4",
    "pydantic>=2.13.4",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
